--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
-.wrapper{
-    background: linear-gradient(rgba(255, 192, 203, 0.786),rgba(128, 0, 128, 0.936));
-}
-
-.myTable{
+.wrapper {
+    background: linear-gradient(rgba(120, 0, 72, 0.633), rgba(0, 36, 199, 0.562));
+    min-height: 100vh;
+  }
+  
+  .table {
     --bs-table-bg: transparent;
-}
+  }
+  
